tests/run/error_ensures_try.out
emberc: runtime error: postcondition failed in 'f' (ensures, line 24)
